# treneiroo

./: .env.example  .gitignore  README.md  pyproject.toml
.tmp-garmin-session-check/: login_rate_limit.json
data/eval/: report_cases.jsonl
executions/: training_review_executions.jsonl
src/garmin_buddy/ai/: contracts.py  llm_analysis_service.py  preparation_contracts.py  user_context.py
src/garmin_buddy/database/: db_service.py
src/garmin_buddy/ingestion/: garmin_client.py
src/garmin_buddy/intake/: __init__.py  document_extraction.py  profile_intake.py
src/garmin_buddy/integrations/: __init__.py  google_sheets_training_log.py
src/garmin_buddy/orchestration/: sync_service.py
src/garmin_buddy/settings/: config.py
src/garmin_buddy/ui/: dashboard.py
tests/: conftest.py
tests/unit/ai/: test_eval_runner.py  test_execution_store.py  test_google_sheets_training_log.py  test_llm_analysis_service.py  test_preparation_execution_store.py  test_preparation_renderer.py  test_preparation_run_store.py  test_report_renderer.py  test_run_store.py  test_training_plan_preparation_contracts.py  test_training_plan_preparation_tools.py  test_training_plan_preparation_workflow.py  test_training_review_contracts.py  test_training_review_tools.py  test_training_review_workflow.py  test_user_context.py
tests/unit/database/: test_activity_repository.py
tests/unit/ingestion/: test_garmin_client.py
tests/unit/intake/: test_profile_intake.py
tests/unit/orchestration/: test_sync_service.py
tests/unit/settings/: test_config.py
tests/unit/ui/: test_preparation_renderer.py  (+1 more)
(+28 files in other folders)
